2005-08-25  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Fix configure check for gecko >= 1.8.

2005-08-22  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphyBrowser.cpp:
	* embed/mozilla/mozilla-embed.cpp:

	Don't use nsIURI::SetPassword, since it asserts when username
	is empty. Use GetUsername, SetUserPass instead.

2005-08-22  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/GlobalHistory.cpp:

	Remove check for redirected URL. Fixes bug #313756.

2005-08-21  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-tab.c: (ephy_tab_update_file_monitor):

	Fix the check for unchanged address to check if we even
	have a monitor at all. Fixes auto-reload on a file:// URI
	loaded after a blank page.
	Also modify the 'is local' check to just check for
	file:// prefix on URI.

2005-08-21  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-find-toolbar.c: (ephy_find_toolbar_open):

	Don't empty find entry on Ctrl-F.

2005-08-21  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Post-release version bump.

2005-08-21  Christian Persch  <chpe@cvs.gnome.org>

	=== Release 1.7.5 ===

	* NEWS:

2005-08-21  Christian Persch  <chpe@cvs.gnome.org>

	* data/default-prefs-common.js:
	* embed/mozilla/mozilla-embed-single.cpp:

	Don't use ext handler for ftp://.

2005-08-21  Christian Persch  <chpe@cvs.gnome.org>

	* lib/ephy-file-helpers.c: (ephy_file_launch_handler):

	Change a g_return_if_fail into a regular return.

2005-08-21  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-window.c: (ephy_window_delete_event),
	(ephy_window_class_init), (ephy_window_init):

	Use class closure for delete event instead of signal handler.

2005-08-21  Christian Persch  <chpe@cvs.gnome.org>

	* src/bookmarks/ephy-topic-action.c:
	(ephy_topic_action_sync_label):

	Use strlen, not hardcoded length.

2005-08-21  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-tab.c: (ephy_tab_finalize):

	Fix mem leak.
