@@ -1,5 +1,11 @@
 2005-08-25  Christian Persch  <chpe@cvs.gnome.org>
 
+	* embed/mozilla/GlobalHistory.cpp:
+
+	Gecko API change.
+
+2005-08-25  Christian Persch  <chpe@cvs.gnome.org>
+
 	* configure.ac:
 
 	Fix configure check for gecko >= 1.8.
